Fixed styling issues on mobile, project section

--- a/src/styles.css
+++ b/src/styles.css
@@ -471,6 +471,7 @@
     margin-top: 20px;
     background-color: transparent;
     
+    
 }
 
 .fa-github, .fa-external-link {
@@ -845,13 +846,31 @@
         height: 200px;
     }
 
+    .projectButtons a{
+        z-index: 100;
+    }
+
     .projectDescription {
         width: 250px;
     }
+    .projectContainer {
+        height: 625px;
+        justify-content: start;
+        padding-top: 0;
+        margin-top: 0; 
+    }
+
+    .theProjects {
+        padding-top: 40px;
+    }
 
     .codingActivity {
-        margin-top: 0px;
+        margin-top: -20px;
         padding-bottom: 100px;
+        
+    }
+    .codingActivity p{
+        z-index: 100;
     }
     .codingActivity img {
         width: 98%;
